--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "redbox-react": "^1.3.2",
     "roadhog": "^0.5.2"
   }
